# Document-Intelligence-Refinery

./: .env.example  .gitignore  Dockerfile  FINAL_PROJECT_REPORT.md  README.md  REPORT.md  debug_docling.py  pyproject.toml  qa_samples.json  refinery.db  reproduce_issue_v2.py  reproduce_issue_v3.py  test_stage3.py  test_stage4.py
.refinery/: extraction_ledger.jsonl
.refinery/chroma_db/d5414a6d-9997-4e4a-bec1-65c7575275df/: index_metadata.pickle
.refinery/chunks/: tax_expenditure_ethiopia_2021_22_ldus.json
.refinery/extracted/: 2013-E.C-Audit-finding-information.json  tax_expenditure_ethiopia_2021_22.json
.refinery/pageindex/: Financial_1.json  Financial_2.json  Financial_3.json  Financial_4.json  Medical_1.json  Medical_2.json  Medical_3.json  Medical_4.json  Scientific_1.json  Scientific_2.json  Scientific_3.json  Scientific_4.json  tax_expenditure_ethiopia_2021_22_index.json
.refinery/profiles/: 2013-E.C-Audit-finding-information.json  tax_expenditure_ethiopia_2021_22.json
rubric/: extraction_rules.yaml
src/: list_models.py  list_models_fixed.py  main.py  run_pipeline.py
src/agents/: chunker.py  extractor.py  fact_extractor.py  indexer.py  ingestion.py  interface.py  query_agent.py  triage.py  validator.py
src/models/: __init__.py  schemas.py
src/storage/: db.py
src/strategies/: base.py  extractors.py  fast_text.py  layout.py  vision.py
tests/: test_config_loading.py  test_extraction_router.py  test_fast_text_extractor.py  test_triage_agent.py
